# basisregisters-auth-lambda

./: .gitignore  README.md  release-auth.sh  release-redis.sh  release.sh
src/: api_key_repository.rs  app_config.rs  lambda_event_helper.rs  structs.rs
src/basisregisters-auth-lambda/: Cargo.toml  README.md
src/basisregisters-auth-lambda/src/: api_key_repository.rs  app_config.rs  lambda_event_helper.rs  main.rs  policy_document_service.rs
src/basisregisters-auth-redis-sync-lambda/: Cargo.toml  README.md
src/basisregisters-auth-redis-sync-lambda/src/: api_key_repository.rs  app_config.rs  main.rs  structs.rs
