[package]
name = "basisregisters-auth-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.34.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_34"] }
base64 = "0.21.5"
redis = "0.23.3"
lazy_static = "1.4.0"